# geotiles

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC_MVT_V02.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: cog.rs  error.rs  io.rs  lib.rs  mbtiles.rs  mercator.rs  mvt.rs  pyramid.rs  source.rs  vector.rs  xyz.rs
examples/: viewer.html
examples/sveltekit/: .gitignore  README.md  generate-tiles.sh  package-lock.json  package.json  vite.config.mjs
examples/sveltekit/data/: hidrografia.geojson
examples/sveltekit/src/: app.html
examples/sveltekit/src/lib/server/: mbtiles.js
examples/sveltekit/src/routes/: +page.svelte
examples/sveltekit/src/routes/tiles/[layer]/[z]/[x]/[y]/: +server.js
examples/sveltekit/src/routes/tiles/[layer]/metadata/: +server.js
