[package]
name = "geotiles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for generating raster tiles (XYZ/MBTiles), COG, and MVT vector tiles from geospatial data"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "geotiles"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
geotiles-core = { version = "0.2", path = "../core" }
surtgis-core.workspace = true
surtgis-colormap.workspace = true
