[package]
name = "geotiles-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tile pyramid math, rendering, COG/MBTiles packaging and MVT encoding for geotiles"
keywords.workspace = true
categories = ["science::geo"]
readme = "README.md"

[features]
default = ["parallel"]
parallel = ["dep:rayon", "surtgis-core/parallel"]

[dependencies]
thiserror.workspace = true
surtgis-core.workspace = true
surtgis-colormap.workspace = true
rusqlite.workspace = true
flate2.workspace = true
tiff.workspace = true
image.workspace = true
mvt.workspace = true
geo.workspace = true
geo-types.workspace = true
geojson.workspace = true
serde_json.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
